prover-ray/zkcdriver/testdata/synced/invalid/rem_04.zkc
//error:3:7-12:expected type u4
fn f(x:u8, y:u8) -> (r:u4) {
  r = x % y
  return
}
